--- a/06-Code/ViveresPedroSystem/src/ec/edu/espe/codeproject/view/FrmProvider.form
+++ b/06-Code/ViveresPedroSystem/src/ec/edu/espe/codeproject/view/FrmProvider.form
@@ -167,6 +167,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="exit"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="txtName1">
       <Properties>
